total price immediatel refresh after increase quantity

--- a/EshopMVC/Views/Cart/Index.cshtml
+++ b/EshopMVC/Views/Cart/Index.cshtml
@@ -96,11 +96,8 @@
                             </tbody>
                         }
                         <tfoot class="table-responsive-md">
-                            <tr>
-                                <td>total price :@(total.ToString("N0"))VNĐ</td>
-                                <td>
-                                    <h2></h2>
-                                </td>
+                            <tr class="footer">
+                                <td id="totalPrice">total price :@(total.ToString("N0"))VNĐ</td>
                             </tr>
                         </tfoot>
                     </table>
