--- a/EshopMVC/Views/Shared/HeaderCart.cshtml
+++ b/EshopMVC/Views/Shared/HeaderCart.cshtml
@@ -2,8 +2,10 @@
 
 <li class="onhover-div mobile-cart">
     <div>
-        <img src="~/Content/assets/images/icon/cart.png"
-             class="img-fluid blur-up lazyload" alt=""> <i class="ti-shopping-cart"></i>
+        <a href="/order">
+            <img src="~/Content/assets/images/icon/cart.png"
+                 class="img-fluid blur-up lazyload" alt=""> <i class="ti-shopping-cart"></i>
+        </a>
     </div>
     <span class="cart_qty_cls">@Model.Count()</span>
     <ul class="show-div shopping-cart">
