--- a/EshopMVC/Views/Home/Index.cshtml
+++ b/EshopMVC/Views/Home/Index.cshtml
@@ -184,7 +184,7 @@
                                 <a href="@url">
                                     <h6>@item.PRODUCTNAME</h6>
                                 </a>
-                                <h4>@(item.PRODUCTPRICE.ToString("N0"))đ</h4>
+                                <h4>@(item.PRODUCTPRICE.ToString("N0")) $</h4>
                                 <ul class="color-variant">
                                     <li class="bg-color1"></li>
                                     <li class="bg-color3"></li>
@@ -350,7 +350,7 @@
                                             <a href="@url">
                                                 <h6>@item.PRODUCTNAME</h6>
                                             </a>
-                                            <h4>@(item.PRODUCTPRICE.ToString("N0"))đ</h4>
+                                            <h4>@(item.PRODUCTPRICE.ToString("N0")) $</h4>
                                         </div>
                                     </div>
                                 }
@@ -383,7 +383,7 @@
                                             <a href="@url">
                                                 <h6>@item.PRODUCTNAME</h6>
                                             </a>
-                                            <h4>@(item.PRODUCTPRICE.ToString("N0"))đ</h4>
+                                            <h4>@(item.PRODUCTPRICE.ToString("N0"))$</h4>
                                         </div>
                                     </div>
                                 }
