--- a/EshopMVC/Views/ProductCategory/ProductDetail.cshtml
+++ b/EshopMVC/Views/ProductCategory/ProductDetail.cshtml
@@ -66,7 +66,7 @@
                                     </div>
                                     <h6>120 ratings</h6>
                                 </div>
-                                <h3 class="price-detail">@(Model.PRODUCTPRICE.ToString("N0"))đ</h3>
+                                <h3 class="price-detail">@(Model.PRODUCTPRICE.ToString("N0")) $</h3>
                                 <div class="product-buttons">
                                     <a href="/them-san-pham?Id=@Model.PRODUCTID&Quantity=1" id="cartEffect"
                                        class="btn btn-solid hover-solid btn-animation">
