--- a/EshopMVC/Views/Shared/_Layout.cshtml
+++ b/EshopMVC/Views/Shared/_Layout.cshtml
@@ -311,7 +311,7 @@
                                 My Account
                                 <ul class="onhover-show-div">
                                     <li><a href="login.html">Login</a></li>
-                                    <li><a href="register.html">register</a></li>
+                                    <li><a href="/dang-ky">Đăng ký</a></li>
                                 </ul>
                             </li>
                         </ul>
