--- a/EshopMVC/Views/User/Index.cshtml
+++ b/EshopMVC/Views/User/Index.cshtml
@@ -43,7 +43,7 @@
             <div class="col-lg-12">
                 <h3>Tạo tài khoản</h3>
                 <div class="theme-card">
-                    @using (Html.BeginForm("CreateUser", "Register", FormMethod.Post))
+                    @using (Html.BeginForm("Register", "User", FormMethod.Post))
                     {
                         @Html.AntiForgeryToken()
                         @Html.ValidationSummary(false, null, new { @class = "text-danger" })
