complete fundamental function

--- a/EshopMVC/Views/Shared/_Layout.cshtml
+++ b/EshopMVC/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                         <div class="col-lg-6">
                             <div class="header-contact">
                                 <ul>
-                                    <li>Welcome to Our store Multikart</li>
+                                    <li>Welcome to Toxic store</li>
                                     <li><i class="fa fa-phone" aria-hidden="true"></i>Call Us: 123 - 456 - 7890</li>
                                 </ul>
                             </div>
@@ -90,7 +90,7 @@
                                 </div>
                                 <div class="brand-logo">
                                     <a href="/">
-                                        <img src="~/Content/assets/images/icon/logo/29.png"
+                                        <img src="~/Content/assets/Homepage/logo.jpg"
                                              class="img-fluid blur-up lazyload" alt="">
                                     </a>
                                 </div>
@@ -358,7 +358,7 @@
                             </div>
                             <div class="brand-logo">
                                 <a href="/">
-                                    <img src="~/Content/assets/images/icon/logo/29.png"
+                                    <img src="~/Content/assets/Homepage/logo.jpg"
                                          class="img-fluid blur-up lazyload" alt="">
                                 </a>
                             </div>
@@ -485,79 +485,15 @@
                         <div class="footer-contant">
                             <div class="footer-logo"><img src="~/Content/assets/images/icon/logo/f10.png" alt=""></div>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore
+                                Final Project
                             </p>
                             <ul class="contact-list">
                                 <li>
-                                    <i class="fa fa-map-marker"></i>Multikart Demo Store, Demo store India 345-659
+                                    <i class="fa fa-map-marker"></i>No Toxic Store
                                 </li>
-                                <li><i class="fa fa-phone"></i>Call Us: 123-456-7898</li>
-                                <li><i class="fa fa-envelope-o"></i>Email Us: <a href="#">Support@Fiot.com</a></li>
+                                <li><i class="fa fa-phone"></i>Call Us: 123 - 456 - 7890</li>
+                                <li><i class="fa fa-envelope-o"></i>Email Us: <a href="#">Support@123.com</a></li>
                             </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6">
-                        <div class="sub-title">
-                            <div class="footer-title">
-                                <h4>my account</h4>
-                            </div>
-                            <div class="footer-contant">
-                                <ul>
-                                    <li><a href="#">mens</a></li>
-                                    <li><a href="#">womens</a></li>
-                                    <li><a href="#">clothing</a></li>
-                                    <li><a href="#">accessories</a></li>
-                                    <li><a href="#">featured</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6">
-                        <div class="sub-title">
-                            <div class="footer-title">
-                                <h4>information</h4>
-                            </div>
-                            <div class="footer-contant">
-                                <ul>
-                                    <li><a href="#">shipping & return</a></li>
-                                    <li><a href="#">secure shopping</a></li>
-                                    <li><a href="#">gallary</a></li>
-                                    <li><a href="#">affiliates</a></li>
-                                    <li><a href="#">contacts</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="sub-title">
-                            <div class="footer-title">
-                                <h4>follow us</h4>
-                            </div>
-                            <div class="footer-contant">
-                                <p class="mb-cls-content">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                                    do eiusmod tempor incididunt
-                                    ut labore
-                                </p>
-                                <form class="form-inline">
-                                    <div class="form-group me-sm-3 mb-2">
-                                        <label for="inputPassword2" class="sr-only">Password</label>
-                                        <input type="password" class="form-control" id="inputPassword2"
-                                               placeholder="Enter Your Email">
-                                    </div>
-                                    <button type="submit" class="btn btn-solid mb-2">subscribe</button>
-                                </form>
-                                <div class="footer-social">
-                                    <ul>
-                                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -569,8 +505,8 @@
                     <div class="col-xl-6 col-md-6 col-sm-12">
                         <div class="footer-end">
                             <p>
-                                <i class="fa fa-copyright" aria-hidden="true"></i> 2017-18 themeforest powered by
-                                pixelstrap
+                                <i class="fa fa-copyright" aria-hidden="true"></i> 2021-22 powered by
+                                No Toxic
                             </p>
                         </div>
                     </div>
