--- a/EshopMVC/Areas/Admin/Views/Product/Create.cshtml
+++ b/EshopMVC/Areas/Admin/Views/Product/Create.cshtml
@@ -64,21 +64,28 @@
                                         <div class="form-group row">
                                             @Html.LabelFor(model => model.ProductCategory, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-md-10">
-                                                @Html.DropDownListFor(model => model.ProductCategory, null, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.DropDownListFor(model => model.ProductCategory, null, "Vui lòng chọn danh mục", new { @class = "form-control" })
                                                 @Html.ValidationMessageFor(model => model.ProductCategory, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            @Html.LabelFor(model => model.SubMenu, htmlAttributes: new { @class = "control-label col-md-2" })
+                                            <div class="col-md-10" id="subMenuHolder">
+                                                <select id="SubMenu" class="form-control" name="SubMenu"></select>
+                                                @Html.ValidationMessageFor(model => model.SubMenu, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             @Html.LabelFor(model => model.ProductName, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-md-10">
-                                                @Html.TextBoxFor(model => model.ProductName, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.TextBoxFor(model => model.ProductName, new { @class = "form-control" } )
                                                 @Html.ValidationMessageFor(model => model.ProductName, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             @Html.LabelFor(model => model.ProductPrice, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-md-10">
-                                                @Html.TextBoxFor(model => model.ProductPrice, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.TextBoxFor(model => model.ProductPrice, new { @class = "form-control" })
                                                 @Html.ValidationMessageFor(model => model.ProductPrice, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
@@ -132,6 +139,9 @@
     <!-- Zoom js-->
     <script src="~/Content/assets/js/jquery.elevatezoom.js"></script>
     <script src="~/Content/assets/js/zoom-scripts.js"></script>
+
+    <!--SubMenu js-->
+    <script src="~/Content/assets/js/controller/sub-menu.js"></script>
 }
 
 
